fixed the site overflow on width

--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ body {
 
 .main {
   min-height: 100%;
-  width: 100%;
   padding: 30px;
   display: flex;
 }
